# block_sparse_cpu

./: CMakeLists.txt  README.md  example.cpp  temp.cpp  tensor_generator.cpp
include/: block_sparse_matrix.h  block_sparse_tensor.h  fast_rng.h  tblis_bs_contraction.h  tensor_layout.h  tensor_utils.h  validation.h
src/: block_sparse_tensor.cpp  bs_flops.cpp  main_tensor.cpp  parser.cpp  tblis_bs_contraction.cpp  tensor_layout.cpp  validation.cpp
